# Data_viz_lab

./: .gitignore  README.md  amazon_stock.html  bokeh_.ipynb  bokeh_2.ipynb  bokeh_plot.html  bokeh_plt_2.html  matplotlib_2.ipynb  matplotlib_v1.ipynb  pyproject.toml  seaborn_2.ipynb  seaborn_3.ipynb  seaborn_v1.ipynb
datasets/: bike_v1.csv
